SCM-1237 Fix bug sonar